2004-04-05  AIDA Shinra <shinra@j10n.org>

	* [w3m-dev 04049] w3m-cvs-1.914-misc.patch
	* Makefile.in (funcname.tab): dont modify when target is unchanged.
		(CFLAGS): need $(CPPFLAGS)?
	* config.h.in: add HAVE_STDINT_H, HAVE_INTTYPES_H
	* configure.in: s/AC_CANONICAL_SYSTEM/AC_CANONICAL_HOST/
		don't use AC_CYGWIN
		don't use $CYGWIN, use $host_os *cygwin*
		AC_DEFINE in AC_CHECK_HEADER (float.h, sys/select.h)
		add stdint.h, inttypes.h
	* etc.c (find_auth_pass_entry): host is case insensitive
	* libwc/wc_types.h: use stdint.h or inttypes.h
	* main.c (MAIN); need GC_init()
	
2004-04-01  Fumitoshi UKAI  <ukai@debian.or.jp>

	Debian Bug#241192 w3m ipv6 FQDN resolution failure
	* etc.c (FQDN): need to set ai_flags AI_CANONNAME, since we need
		ai_canonname here. 

2004-03-31  AIDA Shinra <shinra@j10n.org>

	* [w3m-dev 04050] SSL verify
	* url.c (openSSLHandle): don't load verify locations if 
		both ssl_ca_file and ssl_ca_path is NULL.

2004-03-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix search problem on different charset page than display charset
	* proto.h (conv_search_string): added
	* search.c (migemostr): use conv_search_string
		(conv_search_string): added
	* main.c (srchcore): use conv_search_string
		(reMark): ditto
	* menu.c (menu_search_forward): ditto
		(menu_search_backward): ditto
		(menu_search_next_previous): ditto

2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* rc.c: cleanup LANG == JA

2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): DisplayCharset also follow locale

2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/w3mhelp.cgi.in: use charset parramter
	* scripts/w3mhelp-funcdesc.en.pl.in: add charset
	* scripts/w3mhelp-funcdesc.ja.pl.in: ditto

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): don't use SystemCharset for default of
		DisplayChaset, DocumentCharset

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.5
	* version.c.in: update